--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -320,8 +320,7 @@
             "printers": "Printers",
             "profile": "Profile",
             "sccm_status": "SCCM Status",
-            "security": "Sicherheit",
-            "softwareupdate": "Software Update"
+            "security": "Sicherheit"
         },
         "main": {
             "admin": "Admin",
@@ -487,28 +486,6 @@
         "boot_rom_version": "Boot ROM Version",
         "smc_version": "SMC Version",
         "software": "Software"
-    },
-    "softwareupdate": {
-        "automaticcheckenabled": "Auto Check aktivier",
-        "automaticdownload": "Auto Download",
-        "catalogurl": "Catalog URL",
-        "clienttabtitle": "Software Updates",
-        "configdatainstall": "XProtect automatisch installieren",
-        "criticalupdateinstall": "Kritische Updates installieren",
-        "inactiveupdates": "Ignorierte Updates",
-        "lastattemptsystemversion": "Versuchte Version",
-        "lastbackgroundccdsuccessfuldate": "Datum des letzten Erfolgreichen Hintergrund-CCD",
-        "lastbackgroundsuccessfuldate": "Erfolgreicher Hintergrund-Check",
-        "lastfullsuccessfuldate": "Vollständig erfolgreich",
-        "lastrecommendedupdatesavailable": "Empfohlene Updates",
-        "lastresultcode": "Result Code",
-        "lastsessionsuccessful": "Session erfolgreich",
-        "lastsuccessfuldate": "Erfolgreich am",
-        "lastupdatesavailable": "Updates verfügbar",
-        "mrxprotect": "XProtect Install",
-        "recommendedupdates": "Empfohlene Updates",
-        "reporttitle": "Software Update-Report",
-        "skiplocalcdn": "Skip Local CDN"
     },
     "status": "Status",
     "success": "Erfolg",
