--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -314,8 +314,7 @@
             "network": "Netzwerk",
             "power": "Strom",
             "printers": "Printers",
-            "profile": "Profile",
-            "sccm_status": "SCCM Status"
+            "profile": "Profile"
         },
         "main": {
             "admin": "Admin",
@@ -335,7 +334,6 @@
             "power": "Stromversorgungs-Report",
             "printer": "Drucker-Report",
             "profile": "Profile-Report",
-            "sccm": "SCCM-Agent-Status-Report",
             "server": "Server-Report"
         },
         "user": {
@@ -429,17 +427,6 @@
     "remote_control": "Fernsteuerung",
     "report": {
         "generate": "Report erzeugen"
-    },
-    "sccm_status": {
-        "agent_status": "SCCM Agent Status",
-        "cert_exp": "SCCM Client Cert Ablauf",
-        "enrollment_name": "Enrollment User Name",
-        "enrollment_server": "Enrollment Server",
-        "enrollment_status": "Enrollment Status",
-        "last_checkin": "Letzter SCCM Check In",
-        "mgmt_point": "Management Point",
-        "title": "SCCM Agent Status",
-        "titleheader": "SCCM Agent Information"
     },
     "serial": "Seriennummer",
     "servermetrics": {
