--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -317,8 +317,7 @@
             "network": "Network",
             "power": "Power",
             "printers": "Printers",
-            "profile": "Profiles",
-            "sccm_status": "SCCM Status"
+            "profile": "Profiles"
         },
         "main": {
             "admin": "Admin",
@@ -338,7 +337,6 @@
             "power": "Power Report",
             "printer": "Printer Report",
             "profile": "Profile Report",
-            "sccm": "SCCM Agent Status Report",
             "server": "Server Report"
         },
         "user": {
@@ -527,17 +525,6 @@
     "remote_control": "Remote Control",
     "report": {
         "generate": "Generate Report"
-    },
-    "sccm_status": {
-        "agent_status": "SCCM Agent Status",
-        "cert_exp": "SCCM Client Certificate Expiration",
-        "enrollment_name": "Enrollment User Name",
-        "enrollment_server": "Enrollment Server",
-        "enrollment_status": "Enrollment Status",
-        "last_checkin": "Last SCCM Check In",
-        "mgmt_point": "Management Point",
-        "title": "SCCM Agent Status",
-        "titleheader": "SCCM Agent Information"
     },
     "serial": "Serial Number",
     "servermetrics": {
