--- a/app/modules/ard/locales/en.json
+++ b/app/modules/ard/locales/en.json
@@ -1,4 +1,5 @@
 {
+    "ard": "Apple Remote Desktop",
     "listing": {
         "text": "Text __number__",
         "title": "Apple Remote Desktop Report"
