--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -38,7 +38,6 @@
         "unassigned_groups": "Unassigned Groups"
     },
     "all": "All",
-    "ard": "Apple Remote Desktop",
     "auth": {
         "addtoconfig": "Add this line to config.php:",
         "back_to_site": "Back to site",
@@ -200,17 +199,6 @@
             "description": "Description"
         },
         "loading": "Loading data from server",
-        "munki": {
-            "latest_run": "Latest Run",
-            "package_installed": "Package installed",
-            "package_installed_plural": "Packages installed",
-            "package_removed": "Package removed",
-            "package_removed_plural": "Packages removed",
-            "pending_install": "Pending install",
-            "pending_install_plural": "Pending installs",
-            "pending_removal": "Pending removal",
-            "pending_removal_plural": "Pending removals"
-        },
         "username": "Username"
     },
     "loading": "Loading data from server",
@@ -226,13 +214,17 @@
         "hardware": "Hardware",
         "hardware_report": "Hardware Report"
     },
-    "manifest": {
-        "manifest": "Manifest",
-        "name": "Manifest Name"
-    },
     "memory": "Memory",
     "model": "Model",
     "mouse": "Mouse",
+    "munki": {
+        "error": "Munki error: __error__",
+        "error_plural": "__count__ Munki errors",
+        "package_installed": "__pkg__ installed",
+        "package_installed_plural": "__count__ packages installed",
+        "warning": "Munki warning: __warning__",
+        "warning_plural": "__count__ Munki warnings"
+    },
     "mwa": {
         "mwa_link": "Open in Munki Web Admin"
     },
@@ -351,18 +343,11 @@
             "notfound": "No duplicates found",
             "title": "Duplicate Computer Names"
         },
-        "manifest": {
-            "title": "Manifests"
-        },
         "memory": {
             "title": "Memory Breakdown"
         },
         "munki": {
             "title": "Munki"
-        },
-        "munki_versions": {
-            "title": "Munki Versions",
-            "tooltip": "Munki versions among all clients"
         },
         "new_clients": {
             "no_new_clients": "No new clients",
